[profile.release]
#debug = true
strip = true # Automatically strip symbols from the binary.

[workspace]

members = [
    "core/codegen",
    "core/dtn7",

    # internal
    "examples",
]

[patch.crates-io]
bp7 = { git = "https://github.com/Wollwolke/bp7-rs.git", branch = "feat_mark_bundles_expired" }
dtn7-plus = { git = "https://github.com/Wollwolke/dtn7-plus-rs.git", branch = "feat_mark_bundles_expired" }
